syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/EmilioCliff/payment-polling-service/shared-grpc/pb";

message User {
    string fullname = 1;
    string email = 2;
    string password = 3;
    string access_token = 4;
    string payd_username = 5;
    string payd_account_id = 6;
    string payd_password_api_key = 7;
    string payd_username_api_key = 8;
    google.protobuf.Timestamp created_at = 9;
}
